deploy/k8s/prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - booking.kathielambcentre.org
      secretName: booking-tls-secret
  rules:
    - host: booking.kathielambcentre.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booking
                port:
                  number: 80
